fixed styles for -color and shifted gradient to -gradient which includes -color as one value

--- a/app/styles/vars.scss
+++ b/app/styles/vars.scss
@@ -1,7 +1,7 @@
 $std-text-color: #000;
 $sec-text-color: #fff;
-//$theme-color: #ef4b33;
-$theme-color: linear-gradient(to bottom, #e82e1e 0%,#ef4b33 50%,#e82e1e 100%); /* W3C */
+$theme-color: #ef4b33;
+$theme-gradient: linear-gradient(to bottom, #e82e1e 0%,$theme-color 50%,#e82e1e 100%); /* W3C */
 
 $circle-border-color: #fff;
 $circle-border: 8px solid $circle-border-color;
